--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,7 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
 # dependencies
 /node_modules
 /.pnp
 .pnp.js
-.yarn/install-state.gz
 
 # testing
 /coverage
@@ -12,6 +9,7 @@
 # next.js
 /.next/
 /out/
+/build
 
 # production
 /build
@@ -26,7 +24,10 @@ yarn-debug.log*
 yarn-error.log*
 
 # local env files
-.env*
+.env*.local
+.env
+.env.development
+.env.production
 
 # vercel
 .vercel
@@ -34,3 +35,12 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# uploadthing
+.uploadthing/
+
+# IDE specific files
+.idea/
+.vscode/
+*.swp
+*.swo
