--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,10 @@
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
 # dependencies
 /node_modules
 /.pnp
 .pnp.js
+.yarn/install-state.gz
 
 # testing
 /coverage
@@ -9,7 +12,6 @@
 # next.js
 /.next/
 /out/
-/build
 
 # production
 /build
@@ -26,8 +28,6 @@ yarn-error.log*
 # local env files
 .env*.local
 .env
-.env.development
-.env.production
 
 # vercel
 .vercel
@@ -35,12 +35,3 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
-
-# uploadthing
-.uploadthing/
-
-# IDE specific files
-.idea/
-.vscode/
-*.swp
-*.swo
